2009-02-25  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-sections.txt
	* src/hildon-picker-button.h
	* src/hildon-picker-button.c (+hildon_picker_button_value_changed)
	(_selection_changed, hildon_picker_button_on_dialog_response)
	(hildon_picker_button_class_init, hildon_picker_button_set_selector):
	New hildon_picker_button_value_changed() method.

	* src/Makefile.am
	* src/hildon-picker-button-private.h
	* src/hildon-picker-button.c (hildon_picker_button_init)
	(+hildon_picker_button_disable_value_changed): Add protected
	function for disabling the "value-changed" signal.

	* src/hildon-date-button.c (hildon_date_button_set_date):
	Don't emit "value-changed" for each one of the three columns.

	Fixes: NB#103242 ("HildonPickerButton:value-changed" is emitted
	before actual change of values)

2009-02-24  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_class_init): Reduced SPS, 25 it is too big
	for the treeview overshooting.

2009-02-24  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-banner.c (+hildon_banner_bind_style):
	Renamed from hildon_banner_bind_label_style(), now naming the
	banner itself as well.
	(hildon_banner_show_information),
	(hildon_banner_show_information_with_markup),
	(hildon_banner_show_animation), (hildon_banner_show_progress):
	Name the widgets and labels, based on their type.

	See NB#98597 (Hildon Note and Hildon Banner should use themeable
	background image)

2009-02-24  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-note.c (hildon_note_set_property): call
	hildon_note_rename() on HildonNote:note-type set.
	(hildon_note_rename): Name the note and its label, based on the
	HildonNote:note-type property.

	See NB#98597 (Hildon Note and Hildon Banner should use themeable
	background image)

2009-02-24  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_class_init),
	(hildon_pannable_area_motion_notify_cb): Reviewed the default