@@ -1,3 +1,8 @@
+2009-02-26  Alberto Garcia  <agarcia@igalia.com>
+
+	* src/hildon-edit-toolbar.c (hildon_edit_toolbar_init):
+	Make sure that all widgets contained in the toolbar are shown.
+
 2009-02-25  Alberto Garcia  <agarcia@igalia.com>
 
 	* doc/hildon-sections.txt
